doc/grammar.bnf
<entry> ::= <functionUnparameterised>
<functionUnparameterised> ::= <def> "()" "{" <expression> "}"
<expression> ::= <assignment> | <functionCall> | <assignment> <expression> | <functionCall> <expression>
<functionCall> ::= <word> "();" | <word> "(" <variableList> ");"
<variableList> ::= <word> | <word> "," <variableList>
<assignment> ::= <def> "=" <variableValue> ";"
<variableValue> ::= <string> | <number>
<def> ::= ":" <word>
<string> ::= "\"" <word> "\""
<letter> ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
<word> ::= <letter> | <letter> <word>
<number> ::= <digit> | <digit> <number>
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
